--- a/music-playlist-creator/index.html
+++ b/music-playlist-creator/index.html
@@ -11,15 +11,52 @@
 </head>
 <body>
     <header>
-        <!-- Your header content here -->
+        <nav>
+            <ol id="header-list">
+                <li>
+                    Music Playlist Explorer
+                </li>
+            </ol>
+        </nav>
     </header>
 
     <main> 
-        <!-- Your main content here -->
+        <section id="playlist-cards">
+            <article class="playlist-card">
+                <img class="playlist-image" src="assets/img/playlist.png" alt="">
+                <h4>Playlist Title</h4>
+                <p>Creator Name</p>
+            </article>
+            <article class="playlist-card">
+                <img class="playlist-image" src="assets/img/playlist.png" alt="">
+                <h4>Playlist Title</h4>
+                <p>Creator Name</p>
+            </article>
+            <article class="playlist-card">
+                <img class="playlist-image" src="assets/img/playlist.png" alt="">
+                <h4>Playlist Title</h4>
+                <p>Creator Name</p>
+            </article>
+            <article class="playlist-card">
+                <img class="playlist-image" src="assets/img/playlist.png" alt="">
+                <h4>Playlist Title</h4>
+                <p>Creator Name</p>
+            </article>
+            <article class="playlist-card">
+                <img class="playlist-image" src="assets/img/playlist.png" alt="">
+                <h4>Playlist Title</h4>
+                <p>Creator Name</p>
+            </article>
+            <article class="playlist-card">
+                <img class="playlist-image" src="assets/img/playlist.png" alt="">
+                <h4>Playlist Title</h4>
+                <p>Creator Name</p>
+            </article>
+        </section>
     </main>
 
     <footer>
-        <!-- Your footer content here -->
+        
     </footer>
     <script src="data/data.js"></script>
     <script src="script.js"></script>
