--- a/music-playlist-creator/index.html
+++ b/music-playlist-creator/index.html
@@ -51,16 +51,19 @@
                                 <h1 id="modal-playlist-title" style="color:gray">Playlist Title</h1>
                                 <h5 id="modal-playlist-creator" style="color:gray">Creator Name</h5>
                             </div>
+                            <div id="shuffle-container">
+                                <button id="shuffle-button">Shuffle</button>
+                            </div>
                         </article>
-                        <article class="modal-song-container">
-                            <img class="modal-song-img" src="assets/img/song.png" alt="">
+                        <!-- <article class="modal-song-container"> -->
+                            <!-- <img class="modal-song-img" src="assets/img/song.png" alt="">
                             <section id="modal-song-content">
                                 <h4 id="modal-song-title" class="no-mg">Song Title</h4>
                                 <p id="modal-song-artist" class="no-mg txt-14" >Artist Name</p>
                                 <p id="modal-song-album" class="no-mg txt-14">Album Name</p>
                             </section>
-                            <h4 id="modal-song-time">0.00</h4>
-                        </article>
+                            <h4 id="modal-song-time">0.00</h4> -->
+                        <!-- </article> -->
                     </div>
                 </div>
             </div>
