Core goal complete

--- a/music-playlist-creator/index.html
+++ b/music-playlist-creator/index.html
@@ -15,8 +15,12 @@
     <header>
         <nav>
             <ol id="header-list">
-                <li>
+                <li style="flex-grow: 1;">
                     Music Playlist Explorer
+                </li>
+                <li>
+                    <a href="modify.html" style="margin-right: 30px;">Create Playlist</a>
+                    <a href="featured.html" style="margin-right: 30px;">Featured</a>
                 </li>
             </ol>
         </nav>
@@ -71,7 +75,7 @@
     </main>
 
     <footer>
-        
+        <a href=""></a>
     </footer>
     <script src="data/data.js"></script>
     <script src="data/songs.js"></script>
