--- a/music-playlist-creator/index.html
+++ b/music-playlist-creator/index.html
@@ -27,6 +27,15 @@
     </header>
 
     <main> 
+        <section id="search-bar-container">
+            <button>Playlist Name</button>
+            <button>Playlist Number of Likes</button>
+            <button>Date Added</button>
+            <form id="search-bar">
+                <input type="text" id="search-input" name="search-input" placeholder="Search Something">
+                <button type="submit">Search</button>
+            </form>
+        </section>
         <section id="playlist-cards">
             <!-- <article class="playlist-card">
                 <img class="playlist-image" src="assets/img/playlist.png" alt="">
