--- a/music-playlist-creator/index.html
+++ b/music-playlist-creator/index.html
@@ -28,9 +28,9 @@
 
     <main> 
         <section id="search-bar-container">
-            <button>Playlist Name</button>
-            <button>Playlist Number of Likes</button>
-            <button>Date Added</button>
+            <button id="sort-by-name">Playlist Name</button>
+            <button id="sort-by-likes">Playlist Number of Likes</button>
+            <button id="sort-by-date">Date Added</button>
             <form id="search-bar">
                 <input type="text" id="search-input" name="search-input" placeholder="Search Something">
                 <button type="submit">Search</button>
