Additional data within storage array and code styling

--- a/music-playlist-creator/index.html
+++ b/music-playlist-creator/index.html
@@ -21,7 +21,7 @@
                 <li>
                     <button id="create-btn">Create Playlist</button>
                     <button id="create-song-btn">Create Song</button>
-                    <a href="featured.html" style="margin-right: 30px;">Featured</a>
+                    <a href="featured.html" style="margin: 0px 30px 0px 30px;">Featured</a>
                 </li>
             </ol>
         </nav>
@@ -39,21 +39,7 @@
             </form>
         </section>
         <section id="playlist-cards">
-            <!-- <article class="playlist-card">
-                <img class="playlist-image" src="assets/img/playlist.png" alt="">
-                <h4 style="margin:0px">Playlist Title</h4>
-                <p style="margin:4px">Creator Name</p>
-                <div class="like-function">
-                    <button class="heart">
-                        <i class="material-symbols-outlined">
-                            favorite
-                        </i>
-                    </button>
-                    <div id="heart-text-container">
-                        <p id="heart-text">THIS IS SO COOL</p>
-                    </div>
-                </div>
-            </article> -->
+            <!-- Insert Playlist Cards -->
         </section>
         <section class="modal">
             <div class="modal-content">
@@ -70,15 +56,7 @@
                                 <button id="shuffle-button">Shuffle</button>
                             </div>
                         </article>
-                        <!-- <article class="modal-song-container"> -->
-                            <!-- <img class="modal-song-img" src="assets/img/song.png" alt="">
-                            <section id="modal-song-content">
-                                <h4 id="modal-song-title" class="no-mg">Song Title</h4>
-                                <p id="modal-song-artist" class="no-mg txt-14" >Artist Name</p>
-                                <p id="modal-song-album" class="no-mg txt-14">Album Name</p>
-                            </section>
-                            <h4 id="modal-song-time">0.00</h4> -->
-                        <!-- </article> -->
+                        <!-- Insert Songs -->
                     </div>
                 </div>
             </div>
