Fixed additional off by one errors and created a clear button

--- a/music-playlist-creator/index.html
+++ b/music-playlist-creator/index.html
@@ -36,6 +36,7 @@
                 <input type="text" id="search-input" name="search-input" placeholder="Search Something">
                 <span id="clear-btn">x</span>
                 <button type="submit">Search</button>
+                <button class="search-button" id="refresh-screen">Clear</button>
             </form>
         </section>
         <section id="playlist-cards">
